--- a/posts/alpinejs-plugin-textarea-autogrow.mdx
+++ b/posts/alpinejs-plugin-textarea-autogrow.mdx
@@ -82,7 +82,7 @@ document.addEventListener('alpine:init', () => {
 })
 ```
 
-This looks much better! 🚀
+This looks much better!
 
 Handling it with this approach allows us to add `x-data="grow"` without having to write the functionality over and over again. However... Let's take the following example.
 
