--- a/posts/jumpstart-javascript-variables.mdx
+++ b/posts/jumpstart-javascript-variables.mdx
@@ -42,10 +42,7 @@ person.name = 'Jim'
 
 Both of these will work and update the variable as it's being mutated, not re-assigned.
 
-<Callout>
-  Start out writing mutatable JavaScript but take a look into immutable
-  JavaScript.
-</Callout>
+<Callout text="Start out writing mutatable JavaScript but take a look into immutable JavaScript." />
 
 [Understanding Immutability in JavaScript - Kingsley Silas](https://css-tricks.com/understanding-immutability-in-javascript/)
 
@@ -63,9 +60,10 @@ The `name` variable will now be "Jane".
 
 ## Var Overview
 
-<Callout theme="error">
-  Avoid using `var` whenever possible as it lacks block scoping
-</Callout>
+<Callout
+  theme="error"
+  text="Avoid using `var` whenever possible as it lacks block scoping"
+/>
 
 ## What is Block Scope?
 
