--- a/posts/alpinejs-shopify-clear-cart-api.mdx
+++ b/posts/alpinejs-shopify-clear-cart-api.mdx
@@ -57,6 +57,6 @@ The last part is the HTML, thankfully Alpine JS exposes the store in a `$store` 
 
 And that's that. You can now take `$store.cart.clearCart` and place that where you need to clear the cart in your Shopify store.
 
-<Callout text="If the clear cart button is within a `form` then you'll need to add `type="button"` to the button to prevent it from submitting the form." />
+<Callout text="If the clear cart button is within a `form` then you'll need to add `type='button'` to the button to prevent it from submitting the form." />
 
 If you are using this on the cart page or within a cart popup/drawer then you'll want to handle the UI to show the user that the cart has been emptied.
