--- a/posts/alpinejs-plugin-textarea-autogrow.mdx
+++ b/posts/alpinejs-plugin-textarea-autogrow.mdx
@@ -118,7 +118,7 @@ Under the hood `x-grow` is the JavaScript example showcased at the start of this
 Something to ask is "Why would I use a plugin for something like this?" which is a great question. Here's some reasons.
 
 - Simple, clean and easy to use
-- Easy to reuse and no HTML bloat
+- No HTML bloat
 - Very small JavaScript package (0.000344 MB)
 - Allows for full use of `x-data`
 
