--- a/posts/jumpstart-javascript-variables.mdx
+++ b/posts/jumpstart-javascript-variables.mdx
@@ -26,12 +26,12 @@ This will error as the `name` variable cannot be re-assigned.
 However, it still allows for mutation on arrays and objects.
 
 ```js
+// Array
 const people = ['John', 'Jane']
 
 people.push('Jim')
-```
 
-```js
+// Object
 const person = {
   name: 'John',
   age: 20,
