--- a/projects/hyperui.mdx
+++ b/projects/hyperui.mdx
@@ -9,11 +9,19 @@ featured: true
 [GitHub](https://github.com/markmead/hyperui)
 [Website](https://www.hyperui.dev/)
 
-HyperUI is one of the most popular Tailwind CSS components libraries on GitHub with around 2.8k stars as of writing this. It's free, is open-source and features over 250 components across marketing, eCommerce and application UI.
+HyperUI is one of the most popular Tailwind CSS components libraries on GitHub
+with around 2.8k stars as of writing this. It's free, is open-source and
+features over 250 components across marketing, eCommerce and application UI.
 
-It's built with Next JS, Typescript and Tailwind CSS. I opted for Typescript as it prevents mistakes, this is vital with the project being open-source.
+It's built with Next JS, Typescript and Tailwind CSS with components being HTML.
+I opted for Typescript as it's an extra layer to prevent mistakes, this is vital
+with the project being open-source.
 
-As well as components, HyperUI features a blog post that talks about the following:
+As for the decision to create components in HTML it just makes sense. Even if
+you are using JSX, Blade, Liquid... It's all HTML.
+
+As well as components, HyperUI features a blog post that talks about the
+following:
 
 - Tips and tricks for Tailwind CSS
 - Project updates and announcements
