--- a/src/data/posts/ruby-rails-ultimate-cheatsheet.mdx
+++ b/src/data/posts/ruby-rails-ultimate-cheatsheet.mdx
@@ -5,6 +5,8 @@ date: 2021/10/20
 tags: [ruby, rails]
 ---
 
+_This is an old post that I have updated, I no longer use Ruby on Rails._
+
 # The Ultimate Ruby on Rails
 
 Cheat Sheet & Code Snippets
