Update - Project and uses content

--- a/src/data/projects/hyperui.mdx
+++ b/src/data/projects/hyperui.mdx
@@ -10,19 +10,13 @@ featured: true
 [Website](https://www.hyperui.dev/)
 
 HyperUI is one of the most popular Tailwind CSS components libraries on GitHub
-with around 4k stars as of writing this. It's free, is open-source and
+with around 4.2k stars as of writing this. It's free, is open-source and
 features over 350 components across marketing, eCommerce and application UI.
 
-It's built with Next JS, Typescript and Tailwind CSS with components being HTML.
-I opted for Typescript as it's an extra layer to prevent mistakes, this is vital
-with the project being open-source.
+It's built with Next JS, Typescript and Tailwind CSS with components being written in HTML.
+I opted for Typescript as it helps explain the project without needing documentation, it's not a replacement for documentation but it should help developers pick up the project easier.
 
-As for the decision to create components in HTML it just makes sense. Even if
+As for the decision to create components in HTML, it just makes sense. Even if
 you are using JSX, Blade, Liquid... It's all HTML.
 
-As well as components, HyperUI features a blog post that talks about the
-following:
-
-- Tips and tricks for Tailwind CSS
-- Project updates and announcements
-- Related project announcements
+As well as components, HyperUI features a blog post that talks about Tailwind CSS development.
